--- a/react-course/package.json
+++ b/react-course/package.json
@@ -4,7 +4,8 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "dev": "webpack serve"
+    "dev": "webpack serve",
+    "build": "NODE_ENV='production' webpack"
   },
   "babel": {
     "presets": [
